# projector

./: .gitignore  .gitmodules  01__simulation__principle_8md.html  02__geometry_8md.html  03__tallies_8md.html  05__units_8md.html  Doxyfile  LICENSE  README.md  README_8md.html  ace__loader_8cpp__incl.map  annotated_dup.js  classes.html  classprojector_1_1data__library-members.html  classprojector_1_1data__library.html  classprojector_1_1data__library.js  classprojector_1_1ellipsoid-members.html  classprojector_1_1ellipsoid.html  classprojector_1_1ellipsoid.js  classprojector_1_1ellipsoid__coll__graph.md5  classprojector_1_1ellipsoid__inherit__graph.map  classprojector_1_1geometry.html  classprojector_1_1geometry__coll__graph.map  classprojector_1_1plane-members.html  classprojector_1_1plane.html  classprojector_1_1plane.js  classprojector_1_1plane__inherit__graph.map  classprojector_1_1plane__inherit__graph.md5  classprojector_1_1uniform__mesh__tally-members.html  classprojector_1_1x__cone-members.html  classprojector_1_1x__cone.html  classprojector_1_1x__cone.js  classprojector_1_1x__cone__coll__graph.md5  classprojector_1_1x__cylinder.html  classprojector_1_1x__cylinder__coll__graph.md5  classprojector_1_1x__cylinder__inherit__graph.map  classprojector_1_1y__cone-members.html  classprojector_1_1y__cone.html  classprojector_1_1y__cone.js  classprojector_1_1y__cone__coll__graph.map  (+113 more)
core/: .clang-format  CMakeLists.txt
core/include/: constants.hpp  cross_sections.hpp  environment.hpp  geom.hpp  geometry.hpp  json_converters.hpp  json_loader.hpp  loader.hpp  material.hpp  particle.hpp  path.hpp  physics.hpp  plot.hpp  random_numbers.hpp  runtime.hpp  simulator.hpp  surface.hpp  tally.hpp  utils.hpp  volume.hpp
core/src/: ace_loader.cpp  cross_sections.cpp  environment.cpp  geom.cpp  geometry.cpp  json_converters.cpp  json_loader.cpp  loader.cpp  main.cpp  material.cpp  particle.cpp  physics.cpp  plot.cpp  random_numbers.cpp  runtime.cpp  simulator.cpp  surface.cpp  tally.cpp  uniform_mesh_tally.cpp  utils.cpp  volume.cpp  xcom_loader.cpp
core/tests/: aa_box_tests.cpp  cross_sections_tests.cpp  geometry_tests.cpp  surface_tests.cpp
docs/: 00_user_guide.md  01_simulation_principle.md  02_geometry.md  03_tallies.md  05_units.md  06_input_format.md  08_planned_features.md  09_releases.md  computation_principle.md  geometry.md  input_format.md  planned_features.md
examples/: main_conf.json  materials.json  objects.json  tallies.json
html/: 00__user__guide_8md.html  06__input__format_8md.html  09__releases_8md.html  ace__loader_8cpp.html  ace__loader_8cpp__incl.md5  annotated.html  classprojector_1_1element-members.html  classprojector_1_1element.html  classprojector_1_1element.js  classprojector_1_1geometry-members.html  classprojector_1_1geometry.js  classprojector_1_1geometry__coll__graph.md5  classprojector_1_1uniform__mesh__tally.html  classprojector_1_1uniform__mesh__tally.js  classprojector_1_1uniform__mesh__tally__coll__graph.map  classprojector_1_1uniform__mesh__tally__inherit__graph.md5  classprojector_1_1x__cone__inherit__graph.map  classprojector_1_1x__cylinder-members.html  classprojector_1_1x__cylinder.js  classprojector_1_1y__cylinder.html  classprojector_1_1y__cylinder.js  classprojector_1_1z__cone.html  classprojector_1_1z__cone__coll__graph.md5  classprojector_1_1z__cylinder-members.html  constants_8hpp.html  constants_8hpp__dep__incl.map  constants_8hpp__dep__incl.md5  constants_8hpp__incl.map  constants_8hpp__incl.md5  constants_8hpp_source.html  dir_24d671cfcbc5d5238a6bd565a49d198f.js  dir_4270bfced15e0e73154b13468c7c9ad9_dep.map  dir_49e56c817e5e54854c35e136979f97ca.html  dir_90fd98a0ba30abf7a6068a44995d2d6b.html  environment_8cpp.html  environment_8cpp.js  environment_8cpp__incl.map  environment_8cpp__incl.md5  environment_8hpp.html  environment_8hpp__incl.md5  (+121 more)
latex/: 00__user__guide_8md.tex  01__simulation__principle_8md.tex  02__geometry_8md.tex  03__tallies_8md.tex  05__units_8md.tex  06__input__format_8md.tex  09__releases_8md.tex  ace__loader_8cpp.tex  ace__loader_8cpp__incl.md5  annotated.tex  classprojector_1_1data__library.tex  classprojector_1_1element.tex  classprojector_1_1ellipsoid.tex  classprojector_1_1ellipsoid__coll__graph.md5  classprojector_1_1geometry.tex  classprojector_1_1geometry__coll__graph.md5  classprojector_1_1plane.tex  classprojector_1_1plane__coll__graph.md5  classprojector_1_1uniform__mesh__tally.tex  classprojector_1_1uniform__mesh__tally__inherit__graph.md5  classprojector_1_1x__cone.tex  classprojector_1_1x__cone__coll__graph.md5  classprojector_1_1x__cylinder.tex  classprojector_1_1x__cylinder__coll__graph.md5  classprojector_1_1y__cone.tex  classprojector_1_1y__cone__inherit__graph.md5  classprojector_1_1y__cylinder.tex  classprojector_1_1y__cylinder__inherit__graph.md5  classprojector_1_1z__cone.tex  classprojector_1_1z__cone__inherit__graph.md5  classprojector_1_1z__cylinder.tex  classprojector_1_1z__cylinder__inherit__graph.md5  constants_8hpp.tex  constants_8hpp__dep__incl.md5  constants_8hpp__incl.md5  dir_24d671cfcbc5d5238a6bd565a49d198f.tex  dir_4270bfced15e0e73154b13468c7c9ad9.tex  dir_4270bfced15e0e73154b13468c7c9ad9_dep.md5  dir_90fd98a0ba30abf7a6068a44995d2d6b.tex  (+89 more)
search/: all_0.js  (+63 more)
(+52 files in other folders)
